# pdf-spread-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
